--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "GPL-2.0-or-later",
     "autoload": {
         "psr-4": {
-            "Plott\\Composer\\": "src/"
+            "Plott\\Plottcore\\": "src/"
         }
     },
 	"extra": {
