chore(deps): update symfony packages to patched versions (CVE fix)

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "johnpbloch/wordpress-core-installer": "*"
   },
   "scripts": {
-    "test:phpunit": "phpunit",
+    "test:phpunit": "phpunit --do-not-report-useless-tests --do-not-fail-on-empty-test-suite",
     "test": [
       "@test:phpunit"
     ]
